# Mycobot_ws

devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
devel/lib/mycobot_280jn/: listen_real.py  listen_real_of_topic.py  simple_gui.py  slider_control.py  slider_control_gripper.py
devel/lib/mycobot_280jn_gripper_moveit/: sync_plan.py
devel/lib/mycobot_280jn_moveit/: sync_plan.py
devel/lib/mycobot_communication/: mycobot_services.py  mycobot_topics.py
devel/lib/pkgconfig/: mycobot_280jn.pc  mycobot_280jn_gripper_moveit.pc  mycobot_280jn_moveit.pc  mycobot_communication.pc  mycobot_description.pc  yolo_object_detection.pc
devel/share/gennodejs/ros/mycobot_communication/msg/: _index.js
devel/share/gennodejs/ros/mycobot_communication/srv/: _index.js
devel/share/mycobot_280jn/cmake/: mycobot_280jnConfig.cmake
devel/share/mycobot_280jn_gripper_moveit/cmake/: mycobot_280jn_gripper_moveitConfig.cmake
devel/share/mycobot_280jn_moveit/cmake/: mycobot_280jn_moveitConfig.cmake
devel/share/mycobot_communication/cmake/: mycobot_communication-msg-extras.cmake  mycobot_communication-msg-paths.cmake  mycobot_communicationConfig.cmake
devel/share/mycobot_description/cmake/: mycobot_descriptionConfig.cmake
devel/share/roseus/ros/mycobot_communication/: manifest.l
devel/share/yolo_object_detection/cmake/: yolo_object_detectionConfig.cmake
src/mycobot_280jn/: CMakeLists.txt  package.xml
src/mycobot_280jn/launch/: object_detection.launch  slider_control.launch
src/mycobot_280jn/scripts/: camera_listener.py  object_detection.py
src/yolo_object_detection/: CMakeLists.txt  package.xml
src/yolo_object_detection/launch/: detect_objects.launch
src/yolo_object_detection/models/yolov8n.pt/: data.pkl
src/yolo_object_detection/models/yolov8n.pt/data/: 0  1  10  100  102  103  104  105  106  108  109  110  111  112  114  115  116  117  118  12  120  121  122  123  124  126  127  128  129  13  130  132  133  134  135  136  138  139  14  140  (+257 more)
src/yolo_object_detection/rviz/: mycobot_object_detection.rviz
src/yolo_object_detection/scripts/: detect_objects.py
